@@ -103,7 +103,7 @@ char *a_Dialog_open_file(const char *msg,
  */
 void a_Dialog_text_window(const char *txt, const char *title)
 {
-   int wh = 500, ww = 480, bh = 30;
+   int wh = 600, ww = 650, bh = 30;
    int lines, line_num_width;
    TextBuffer *text_buf = new TextBuffer();
    text_buf->text(txt);
